--- a/style.css
+++ b/style.css
@@ -1,5 +1,138 @@
 /* CSS Document */
-*, *::after, *::before {
-  box-sizing:border-box;  
+
+body {
+    margin: 0;
+    background-color: white;
 }
 
+/* LAYOUT VAN DE HEADER */
+
+header {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+
+    jouw code hier
+}
+
+/* navigatie */
+
+header nav {
+    background-color: #1D1D1F;
+    flex-grow: 1;
+
+    /* Zorgt ervoor dat de blokjes volledig worden gevuld */
+}
+
+header nav ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    display: flex;
+    /* jouw code hier */
+}
+
+header nav li {
+    /* jouw code hier */
+    min-width: 6em;
+    flex-grow: 1;
+}
+
+
+
+header nav a {
+    color: white;
+    background-color: #1D1D1F;
+    text-decoration: none;
+    outline: none;
+    display: block;
+    line-height: 2.5em;
+    text-align: center;
+    margin-top: 1em;
+    margin-bottom: -.5.em;
+    /* jouw code hier */
+}
+
+.applelogo {
+    width: 25px;
+}
+
+.menulogo {
+    width: 25px;
+}
+
+.shoplogo {
+    width: 20px;
+}
+
+/* MAIN */
+
+main h1 {
+    text-align: center;
+    font-size: 10px;
+    color: black;
+    background-color: white;
+    margin: 0;
+    padding: 1em;
+
+
+}
+
+/* de lijst met foto's */
+
+main ul {
+    list-style: none;
+    margin: 0;
+    padding: 0em;
+    display: grid;
+    grid-gap: 1em;
+    /*   display: block;*/
+}
+
+main li {
+    position: relative;
+    background-color: white;
+    display: flex;
+    justify-content: center;
+
+}
+
+main li:first-of-type {
+    background-color: #131313;
+    width: 100%;
+    height: 80%;
+}
+
+main h2:first-of-type {
+    text-align: center;
+    position: absolute;
+    justify-content: center;
+    z-index: 1;
+    color: white;
+}
+
+main p {
+    color: white;
+    position: absolute;
+    width: 50%;
+    z-index: 1;
+    margin-top: 4em;
+    text-align: center;
+
+}
+
+main img {
+    display: block;
+    width: 100%;
+    height: auto;
+    position: relative;
+
+
+}
+
+
+@media (min-width:24em) {
+    main ul {
+        grid-template-columns: repeat( auto-fit, minmax(20em, 1fr));
+    }
+}
