--- a/styles/style.css
+++ b/styles/style.css
@@ -61,7 +61,7 @@ main h1 {
     text-align: center;
     font-size: 12px;
     color: black;
-    background-color: white;
+    background-color: b;
     margin: 0;
     padding: 1em;
     font-weight: lighter;
@@ -85,6 +85,7 @@ main li {
     position: relative;
     display: flex;
     justify-content: center;
+    grid-template-columns: 1fr 2fr 1fr;
     /*    Zorgt ervoor dat alles binnen de li netjes gecentreerd staat*/
 }
 
@@ -105,7 +106,7 @@ main h2:first-of-type {
 
 }
 
-main h3:first-of-type {
+li:nth-of-type(2) h2 {
     text-align: center;
     position: absolute;
     justify-content: center;
@@ -119,7 +120,7 @@ main h3:first-of-type {
 main p {
     color: white;
     position: absolute;
-    width: 50%;
+    width: 70%;
     z-index: 1;
     margin-top: 4em;
     text-align: center;
@@ -129,7 +130,7 @@ main p {
 
 main li a {
     position: absolute;
-    margin-top: 35%;
+    margin-top: 8em;
     z-index: 1;
     word-spacing: 3em;
     text-decoration: none;
@@ -141,7 +142,7 @@ main img {
 }
 
 
-.kleur {
+li:nth-of-type(2) p {
     color: black;
 }
 
@@ -159,6 +160,19 @@ main img {
     margin-top: 12em;
     margin-bottom: 4em;
 
+}
+
+.footertkst {
+    color: gray;
+    background-color: lightgray;
+    position: absolute;
+    margin: 0em;
+    text-align: center;
+    font-size: 12px;
+    padding-top: 1em;
+    padding-bottom: 1em;
+    font-weight: lighter;
+    width: 100%
 }
 
 @media (min-width:24em) {
