--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,3 @@
-/* CSS Document */
-
 body {
     margin: 0;
     background-color: white;
@@ -176,11 +174,22 @@ li:nth-of-type(2) p {
     width: 100%
 }
 
-@media (min-width:24em) {
+@media (min-width:25em) {
     main ul {
-        grid-template-columns: repeat( auto-fit, minmax(20em, 1fr));
+        grid-template-columns: repeat( auto-fit, minmax(25em, 1fr));
+    }
+    footer {
+        grid-column-start: 1;
+        grid-column-end: -1;
     }
 }
+
+@media (min-width:60em) {
+    .footertkst {
+        font-size: 18px
+    }
+}
+
 
 .bag {
     max-width: 500px;
