--- a/styles/style.css
+++ b/styles/style.css
@@ -2,54 +2,57 @@ body {
     margin: 0;
     background-color: white;
     font-family: 'Roboto', sans-serif;
-    /*    zorgt voor geen witruimte om de li's'*/
+    /*        'margin 0 zorgt voor geen witruimte'*/
 }
 
 /* navigatie */
 
 header nav {
     background-color: #1D1D1F;
-
+    /*achtergrondkleur*/
 }
 
 header nav ul {
     margin: 0;
     padding: 0;
     list-style: none;
+    /*    zorgt ervoor dat er geen puntjes voor staan, geen opmaak/*/
     display: flex;
-    /*    zorgt ervoor dat ze onder elkaar staan, flex*/
+    /*    zorgt ervoor dat ze naast elkaar staan, flex*/
 }
 
 header nav li {
     min-width: 6em;
     flex-grow: 1;
-    /*    Dit vult de li is helemaal op*/
+    /*    elk child zal nu een even grote hoeveelheid vullen in de container*/
 }
-
-
 
 header nav a {
     display: block;
     line-height: 2.5em;
+    /*    zorgt voor meer ruimte*/
     text-align: center;
+    /*    centreerd logo's */
     margin-top: 1em;
-    /*    basis opmaak*/
 }
 
 .applelogo {
     width: 25px;
+    /*    grootte van het icoontje*/
 }
 
 .menulogo {
     width: 25px;
     margin-left: -4.5em;
     margin-bottom: .3em;
+    /*    grootte van icoontje en positionering*/
 }
 
 .shoplogo {
     width: 20px;
     height: 25px;
     margin: auto 0;
+    /*    grootte van icoontje en positionering*/
 }
 
 /*zorgt voor standaar grote pngs*/
@@ -66,7 +69,7 @@ main h1 {
     font-weight: lighter;
     line-height: 1.6em;
 
-    /*standaar opmaak*/
+    /*standaard tekst opmaak*/
 }
 
 /* de lijst met foto's */
@@ -77,7 +80,7 @@ main ul {
     padding: 0em;
     display: grid;
     grid-gap: 1em;
-    /*       display: block;*/
+    /*    grid zorgt ervoor dat de content naast elkaar komt te staan bij een groot scherm. Grid gap is de ruimte tussen de content.;*/
 }
 
 main li {
@@ -86,6 +89,7 @@ main li {
     justify-content: center;
     grid-template-columns: 1fr 2fr 1fr;
     /*    Zorgt ervoor dat alles binnen de li netjes gecentreerd staat*/
+    /*   grid-template-columns: Definieert de kolommen en rijen van het raster met een door spaties gescheiden waarden. De waarden vertegenwoordigen de trackgrootte en de ruimte ertussen vertegenwoordigt de rasterlijn*/
 }
 
 main li:first-of-type {
@@ -102,7 +106,7 @@ main h2:first-of-type {
     justify-content: center;
     z-index: 1;
     color: white;
-
+    /*z-index zorgt ervoor dat de content naar voren komt.is positioned relative positioneerd zichzelf naar de dichtsbijzijnde voorouder */
 }
 
 li:nth-of-type(2) h2 {
@@ -115,7 +119,6 @@ li:nth-of-type(2) h2 {
 
 }
 
-
 main p {
     color: white;
     position: absolute;
@@ -127,17 +130,13 @@ main p {
 
 }
 
-
-
 main img {
     width: 70%;
 }
 
-
 li:nth-of-type(2) p {
     color: black;
 }
-
 
 .tels {
     width: 100%;
@@ -165,30 +164,14 @@ li:nth-of-type(2) p {
     padding-bottom: 1em;
     font-weight: lighter;
     width: 100%
+    /*        standaaar opmaak*/
 }
-
-@media (min-width:25em) {
-    main ul {
-        grid-template-columns: repeat( auto-fit, minmax(25em, 1fr));
-    }
-    footer {
-        grid-column-start: 1;
-        grid-column-end: -1;
-    }
-}
-
-@media (min-width:60em) {
-    .footertkst {
-        font-size: 18px
-    }
-}
-
 
 .bag {
     max-width: 500px;
     height: 280px;
     display: none;
-    /* padding: 10px 50px; */
+    /* max breedtje van 500px zorgt ervoor dat het object niet groter wordt.; */
 }
 
 .emptyBag {
@@ -199,12 +182,12 @@ li:nth-of-type(2) p {
 .element {
     width: 80%;
     margin: 5px auto;
-    /* border-bottom: 1px solid #d2d2d7; */
     border-top: 1px solid #d2d2d7;
 }
 
 .visible {
     display: block;
+    /*    Deze wordt getriggerd door het stukje javascript en zet het dropdown menu aan of uit*/
 }
 
 #shoppingbag {
@@ -213,37 +196,75 @@ li:nth-of-type(2) p {
     margin-right: 5px;
 }
 
-
-a {
-    text-decoration: none;
-
-}
-
-a:hover {
-    text-decoration: overline;
-}
-
-a:visited {
-    color: lightblue;
-}
-
-a:active {
-    color: blue;
+.linkProduct a {
+    margin: 15px auto;
 
 }
-
 
 .linkProduct {
     display: flex;
     position: absolute;
-    margin-top: 30%;
+    margin-top: 142px;
     width: 50%;
 
 
 }
 
-.linkProduct a {
-    margin: 15px auto;
-    color: #2997FF;
+a {
+    text-decoration: none;
+    /*zorgt voor geen lijn onder de atjes*/
+}
 
+a:hover {
+    text-decoration: overline;
+    /*    zorgt bij het hoveren voor een lijn boven de a*/
+}
+
+a::before {
+    content: "";
+    background-color: currentColor;
+
+    position: absolute;
+
+    left: .2em;
+    right: .2em;
+    bottom: -.25em;
+    height: .25em;
+    border-radius: .125em;
+    /*zorgt voor ronde hoek border*/
+    transform: scalex(0);
+    transition: .5s;
+    /*    zorgt  samen met a:hover::before voor een onderline die geanimeerd is door de code hierboven. */
+}
+
+a:hover::before {
+    transform: scalex(1);
+}
+
+
+a:visited {
+    color: deepskyblue;
+}
+
+a:focus {
+    color: blue
+}
+
+@media (min-width:25em) {
+    main ul {
+        grid-template-columns: repeat( auto-fit, minmax(25em, 1fr));
+        /*zorgt ervoor dat de content naast elkaar komt na 25 em*/
+    }
+    footer {
+        grid-column-start: 1;
+        grid-column-end: -1;
+        /*        zorgt ervoor dat de footer onder de content de gehele ruimte inneemt */
+    }
+}
+
+@media (min-width:60em) {
+    .footertkst {
+        font-size: 18px
+        /*            hierdoor wordt de tekst in de footer groter na 60 em */
+    }
 }
