--- a/styles/style.css
+++ b/styles/style.css
@@ -153,7 +153,7 @@ li:nth-of-type(2) p {
 
 }
 
-.footertkst {
+footer li p {
     color: gray;
     background-color: lightgray;
     position: absolute;
@@ -171,7 +171,7 @@ li:nth-of-type(2) p {
     max-width: 500px;
     height: 280px;
     display: none;
-    /* max breedtje van 500px zorgt ervoor dat het object niet groter wordt.; */
+    /* max breedtje van 500px zorgt ervoor dat het object niet groter wordt. Dit is de div van het dropdown menu; */
 }
 
 .emptyBag {
@@ -263,7 +263,7 @@ a:focus {
 }
 
 @media (min-width:60em) {
-    .footertkst {
+    footer li p {
         font-size: 18px
         /*            hierdoor wordt de tekst in de footer groter na 60 em */
     }
